<resources>
    <string name="app_name">MaraicherAndroid</string>
    <string name="veuillez_vous_connecter">Please login</string>
    <string name="username">Username</string>
    <string name="mot_de_passe">password</string>
    <string name="connecter">Connecter</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_select">Select</string>
    <string name="title_caddie">Cart</string>
    <string name="title_paiement">Payment</string>
    <string name="connect_button">Login</string>
    <string name="deconnect_button">Logout</string>
    <string name="language_button">Change Language</string>
    <string name="checkbox">New Client</string>
    <string name="article">article</string>
    <string name="next_button">Next</string>
    <string name="precedent_button">Previous</string>
    <string name="achat_button">Buy</string>
    <string name="Delete">Delete</string>
    <string name="DeleteAll">Delete All</string>
    <string name="ConfirmButton">Confirm</string>
</resources>