<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_select">

    <fragment
            android:id="@+id/navigation_select"
            android:name="com.example.maraicherandroid.Activities.ui.select.SelectFragment"
            android:label="@string/title_select"
            tools:layout="@layout/fragment_select"/>

    <fragment
            android:id="@+id/navigation_caddie"
            android:name="com.example.maraicherandroid.Activities.ui.caddie.CaddieFragment"
            android:label="@string/title_caddie"
            tools:layout="@layout/fragment_caddie"/>

    <fragment
            android:id="@+id/navigation_paiement"
            android:name="com.example.maraicherandroid.Activities.ui.paiement.PaiementFragment"
            android:label="@string/title_paiement"
            tools:layout="@layout/fragment_paiement"/>
</navigation>