<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.LoginActivity">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/Username"
            android:minHeight="48dp"
            tools:ignore="HardcodedText,MissingConstraints"
            android:hint="@string/username" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.24"/>
    <CheckBox
            android:text="@string/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checkBox"
            tools:ignore="HardcodedText,MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/Password" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.149"/>
    <Button
            android:text="@string/connect_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/BtnLogin"
            android:onClick="onLogin"
            tools:ignore="HardcodedText,MissingConstraints" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/Password"
            android:hint="@string/mot_de_passe" tools:ignore="HardcodedText"
            app:layout_constraintTop_toBottomOf="@+id/Username"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.05"/>
</androidx.constraintlayout.widget.ConstraintLayout>