<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.ui.select.SelectFragment">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:src="@tools:sample/avatars" android:id="@+id/imageView"
            tools:ignore="MissingConstraints" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/article"/>
    <Button
            android:text="@string/precedent_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonPrecedent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"
            tools:ignore="MissingConstraints" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="72dp"/>
    <Button
            android:text="@string/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonSuivante"
            app:layout_constraintStart_toEndOf="@+id/buttonPrecedent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.73" tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="72dp"
            android:onClick="onSuivante"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/article"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintBottom_toTopOf="@+id/prixunitaire" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.967"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/prixunitaire"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.121"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/stock"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prixunitaire" android:layout_marginTop="4dp"
            app:layout_constraintHorizontal_bias="0.498"/>
    <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/buttonAchat"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.129"/>
    <Button
            android:text="@string/achat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonAchat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stock" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.101"/>

</androidx.constraintlayout.widget.ConstraintLayout>